# cookiecutter-python

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: setup.py
{{ cookiecutter.repo_name }}/: .build.yml  .pre-commit-config.yaml  LICENSE  README.md  publish-docs.sh  pydoc-markdown.yml  reset-venv.sh  setup.cfg  setup.py  tox.ini
{{ cookiecutter.repo_name }}/tests/: test_main.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/: __init__.py
