[metadata]
name = {{ cookiecutter.project_name }}

[options]
packages = {{ cookiecutter.project_name }}
setup_requires =
    setuptools_scm
install_requires =
    # requirements
include_package_data = True

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_name }} = {{ cookiecutter.project_name }}:main
