[metadata]
name = {{ cookiecutter.project_name }}
author = {{ cookiecutter.author }}
license = MIT

[options]
packages = {{ cookiecutter.project_name }}
setup_requires = setuptools_scm
install_requires =
    # requirements
# https://setuptools.readthedocs.io/en/stable/userguide/datafiles.html
include_package_data = True

# https://setuptools.readthedocs.io/en/stable/userguide/dependency_management.html#optional-dependencies
[options.extras_require]
ci = tox
dev =
    pytest
    black
    ipython
    ipdb

# https://setuptools.readthedocs.io/en/stable/userguide/entry_point.html
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_name }} = {{ cookiecutter.project_name }}:main
